<resources>
    <string name="app_name">Aircrafter</string>
    <string name="title_activity_maps">Map</string>
    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="cluster_planes">Cluster planes</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="speed_m_s">m/s</string>
    <string name="speed_km_h">km/h</string>
</resources>