<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/header_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/rounded_corners_top"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:text="@string/settings"
        android:textSize="22sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_small"
        >

        <CheckBox
            android:id="@+id/cluster_planes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cluster_planes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/options"
            app:layout_constraintTop_toBottomOf="@id/cluster_planes" />

        <RadioGroup
            android:id="@+id/options_group_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/label_options"
            android:checkedButton="@id/speed_m_s"
            >

            <RadioButton
                android:id="@+id/speed_m_s"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/speed_m_s" />

            <RadioButton
                android:id="@+id/speed_km_h"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/speed_km_h" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>